--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -18,12 +18,7 @@ autorestart=true
 stderr_logfile=/var/log/php-fpm.log
 stdout_logfile=/var/log/php-fpm.log
 
-[program:redis]
-command=redis-server
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/redis.log
-stdout_logfile=/var/log/redis.log
+# Redis removed for Render deployment
 
 [program:laravel-queue]
 process_name=%(program_name)s_%(process_num)02d
