--- a/nginx.conf
+++ b/nginx.conf
@@ -17,22 +17,27 @@ http {
         root /var/www/html/public;
         index index.php index.html;
 
-        location / {
-            try_files $uri $uri/ /index.php?$query_string;
-        }
-
-        location ~ \.php$ {
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-            include fastcgi_params;
-        }
-
+        # Handle static files first
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
         }
 
+        # Handle PHP files
+        location ~ \.php$ {
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+            include fastcgi_params;
+            fastcgi_hide_header X-Powered-By;
+        }
+
+        # Handle Laravel routes
+        location / {
+            try_files $uri $uri/ /index.php?$query_string;
+        }
+
+        # Deny access to sensitive files
         location ~ /\. {
             deny all;
         }
