--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
         index index.php index.html;
 
         # Handle static files first
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|html)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
             try_files $uri =404;
