--- a/render.yaml
+++ b/render.yaml
@@ -17,6 +17,8 @@ services:
       php artisan db:seed --force
       php artisan storage:link
       php artisan optimize
+      php artisan view:clear
+      php artisan route:clear
     startCommand: /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf
     envVars:
       - key: APP_ENV
