--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "echo 'No build process needed with CDN'",
+        "build": "echo 'No build process needed with CDN'"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.21",
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.13",
-        "vite": "^5.0.0"
-    },
-    "dependencies": {
-        "@tailwindcss/postcss": "^4.1.13",
-        "@tailwindcss/vite": "^4.1.13"
+        "axios": "^1.6.4"
     }
 }
