--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.14",
         "vite": "^4.5.0"
+    },
+    "dependencies": {
+        "simplemde": "^1.11.2"
     }
 }
