--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "openpay/sdk": "^3.1",
         "predis/predis": "^3.2",
         "reliese/laravel": "^1.4",
         "simplesoftwareio/simple-qrcode": "^4.2",
