FIX - Env example for openpay

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Openpay Configuration
+OPENPAY_ID=
+OPENPAY_PRIVATE_KEY=
+OPENPAY_PUBLIC_KEY=
+OPENPAY_SANDBOX_MODE=true
